Migrate to Spring Boot 4.x (#2889)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>