@@ -20,6 +20,8 @@ import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Proxy;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyManagementException;
@@ -43,7 +45,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import feign.Contract;
 import feign.Feign;
 import feign.FeignException;
@@ -84,6 +85,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.multipart.MultipartFile;
+import tools.jackson.databind.ObjectMapper;
 
 @Slf4j
 @Builder
@@ -263,7 +265,7 @@ public class HawkbitClient {
     private Object callMultipartFormDataRequest(
             final Method method, final Object[] args,
             final Tenant tenant, final Controller controller,
-            final Class<?>[] parameterTypes, final ObjectMapper objectMapper) throws IOException {
+            final Class<?>[] parameterTypes, final ObjectMapper objectMapper) throws IOException, URISyntaxException {
         final PostMapping postMapping = method.getAnnotation(PostMapping.class);
         final Annotation[][] parametersAnnotations = method.getParameterAnnotations();
         // build path - replace @PathVariables
@@ -275,8 +277,8 @@ public class HawkbitClient {
             }
         }
 
-        final HttpURLConnection conn = (HttpURLConnection) new URL(
-                (controller == null ? hawkBitServer.getMgmtUrl() : hawkBitServer.getDdiUrl()) + path).openConnection();
+        final HttpURLConnection conn = (HttpURLConnection) new URI(
+                (controller == null ? hawkBitServer.getMgmtUrl() : hawkBitServer.getDdiUrl()) + path).toURL().openConnection();
         conn.setRequestMethod("POST");
 
         // deal with authentication - only from headers1
@@ -359,7 +361,7 @@ public class HawkbitClient {
         }
     }
 
-    private static Object deserialize(final InputStream is, final Class<?> type, final ObjectMapper objectMapper) throws IOException {
+    private static Object deserialize(final InputStream is, final Class<?> type, final ObjectMapper objectMapper) {
         return type == void.class || type == Void.class ? null : objectMapper.readValue(is, type);
     }
 
